methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:2: error: not found: value growLineFlowers
  growLineFlowers()
  ^FlowerCase:6: error: not found: value growLineFlowers
  growLineFlowers()
  ^FlowerCase:14: error: not found: value color
  faireFleur(color.black)
             ^